* Fix #829: added other Acer monitor serial support (H226HQL, K222HQL, SA220Q)
* Enhanced Qemu KVM virtualization detection, thanks to Rico29
* Dmidecode output parsing cleanup
* Fix #804: Filter out virtual overlay FS while using docker
* Fix #540: Added powersupplies support on MacOS
* Fix #797: Fix ASM storage inventory
* Better canonical manufacturer reporting
* Added PartNumber API to enhanced inventory memory and controllers support:
 * Elpida, Hynix, Micron & Samsung memory partnumbers
 * Dell controller partnumbers
* thanks to Vadim Pisarev:
 * Storages can now use smartctl command
 * Enhanced HP Storage inventory with smartctl
 * Memory inventory includes partnumber as MODEL
 * Controller inventory includes SERIAL and MODEL
 * Enhanced memory and controllers inventory via IPMI
 * Better storage support
 * Micron memories PartNumber support
* Updated pci.ids to 2020.11.14 version
* Updated usb.ids to 2020.08.26 version

netdiscovery/netinventory:
* Bump NetDiscovery task version to 4.2
* Bump NetInventory task version to 4.2
* Updated Ricoh printers support with better hostname detection
* Updated Zebra printers support with better hostname detection
* Introduced Siemens industrial modules support
* Introduced Multitech industrial modules support
* Fix #823, #856: Add Ubiquiti UniFi AP linux appliance support
* Fix #772: Enhanced some HP switchs support
* Introduced Hwg support, thanks to Bertrand Keller
* Fix #830: Retrieve rigth model for Oki printers
* Updated sysobject.ids (tagged fia-2.6 tag on github repository)

ESX:
* Bump ESX task version to 2.6
* verify a user and password are provided before attemting to connect to ESX server

injector:
* Fix an issue with --xml-ua option triggering a perl fatal error on empty or wrong XML files
* Fix typo in man page

2.5.2 Mon, 16 Dec 2019

core:
* fix HTTP server IPv6 support as HTTP::Daemon module now supports IPv6 natively
* Always compile IPv4 address as IPv6 too for trusted ips. This is needed when